--- a/Thesis2025_Hanatani/Thesis2025/6B_Appendix_Morphing.tex
+++ b/Thesis2025_Hanatani/Thesis2025/6B_Appendix_Morphing.tex
@@ -2,107 +2,182 @@
 \chapter{音声モーフィングの手続き}
 \label{sec:MorphingAppendix}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-音声分析変換合成システムWORLD\cite{morise2016world}を用いた音声モーフィング用のツール群\cite{kawahara2024interactive,kawahara2024WORLDGUI}を用いて、
+音声分析変換合成システムWORLD\cite{morise2016world}を用いた音声モーフィング用のツール群\cite{kawahara2022WORLDGUI_J,kawahara2024interactive,kawahara2024WORLDGUI}を用いて、
 実験刺激音の合成を行なった。
 本章では実際に行った手続きについて説明する。
 
 %%--------------------------------------------------------------
-\section{事前準備：WorldHandlerを用いた音声分析}
+\section{事前準備：worldHandlerを用いた音声分析と合成}
 \label{sec:WORLDHandler}
 %%--------------------------------------------------------------
-まず、WORLDの分析用ツール（WorldHandler）を用いて、音声の分析を行った（図\ref{fig:worldHandler}）。
+まず、WORLDの分析用ツール（worldHandler）を用いて、音声の分析を行った。
+例として、図\ref{fig:worldHandler}に単語「なみ」の喜び音声の分析結果を示す。
+ここでは、モーフィングに必要なパラメタ（基本周波数・非周期性指標・スペクトル包絡）を分析し、合成音声が生成される。
+まず、Read Soundボタンを押して音声を読み込む。
+次に、Fo extraction ボタンを押すと基本周波数が求められる。
+自動で有声音と無声音の境界が設定されるが、必要であれば、GUI上で境界を対話的に修正する。
+Aperiodicity ボタンをを押すと、設定された基本周波数と有声/無声境界に基づいて非周期性指標が計算される。
+Spectrum ボタンを押すとスペクトル包絡が求められ、Synthesis ボタンで合成音声が作成される。
+最後にPlay synth ボタンで再生して確認し、分析結果と合成音声を保存する。
 
 
-% % ----------------------------------%
-% \begin{figure}[h]
-%   \vspace{10pt}
-%   \centering
-%   \includegraphics[width = 1\columnwidth]{Figure/Appendix/6B/worldHandler_GUI.eps} % 2022花谷卒論より
-%   \caption{
-%     WorldHandlerの操作画面
-%     }
-%   \label{fig:worldHandler}
-% \end{figure}
-% % ----------------------------------%
+% ----------------------------------%
+\begin{figure}[h]
+  \vspace{10pt}
+  \centering
+  \includegraphics[width = 1\columnwidth]{Figure/Appendix/6B/worldHandler_GUI_nami_hap.eps} 
+  \caption{
+    WorldHandlerの操作画面
+    }
+  \label{fig:worldHandler}
+\end{figure}
+% ----------------------------------%
+
+
+% from kawahara2022WORLDGUI_J
+% 3.1 worldHandler
+% 図1に worldHandler の GUI の例を示す。
+% 左側のパネルには、 操作用のボタンなどが配置されている。右側のパネルは、情報 の可視化用である。
+% 左側パネルの最上段の Read Sound ボタンのクリックにより、 音声ファイルを選択して読み込む。
+% MATLAB の音声ファイル 読み込み用の関数がサポートしている全ての種類のファイルを 読み込むようにしている。
+% 次の段の Fo extraction ボタンのクリックにより、基本周波数が求められる。
+% WORLD のピッチ抽出器である Harvest は、音 声分析合成の際の品質劣化を避けることを狙い、有声音と判断 する割合が高く設定されている。
+% 目的によっては、この偏りは 不都合であるため、この GUI には、有声/無声境界を対話的に 修正する機能を加えてある。
+% また、求められた基本周波数の軌 跡を手作業によって修正することも可能にしている。
+% このボタ ンの直下の UNDO と REDO は、間違いの取り消しとやり直し のために用意した。
+% その下の Play original と、さらにその下の Play Voiced と PlayUV は、有声/無声境界を試聴で確認するた めに用意した。
+% その下の Aperiodicity ボタンをクリックすると、設定された 基本周波数と有声/無声境界に基づいて、非周期性指標が計算 される。
+% 同時に、その下の Spectrum ボタンが使用可能になる。 
+% Spectrum ボタンのクリックによりスペクトル包絡が求められ、 その下の Synthesis ボタンが使用可能になる。
+% Synthesis ボタンのクリックにより合成音声が作成され、以 下のボタンで再生し、分析結果をファイルとして格納すること ができるようになる。
+% MATLAB のグラフには、拡大や移動、読み出しの機能が既 定値として用意されている。
+% この GUI でもそれらの機能を利 用できる。
+% また、MATLAB のグラフ間の軸の連動機能を設定 してあり、
+% 基本周波数、波形、スペクトル包絡のいずれのグラ フで時間軸に対して行った操作も他のグラフを連動して変化さ せる。
+% なお、原音声も合成音声も、グラフが拡大表示されてい る場合には、グラフとして見えている部分に対応する音だけが 再生される。
+
+\clearpage
+
+%%--------------------------------------------------------------
+\section{morphingAlignerを用いた音声間の対応付け}
+\label{sec:morphingAligner}
+%%--------------------------------------------------------------
+worldHandlerで出力したmatファイルを読み込み、2つの音声間の対応を調整する。
+図\ref{fig:morphAli}では単語「なみ」の喜び音声と悲しみ音声の調整を行っている。
+なお、図\ref{fig:MorphingAligner}はこれらのスペクトル部分のみを切り取った画像である。
+(a)は単語「なみ」の喜び音声、(b)は悲しみ音声、(c)はそれら2つをオーバーレイ表示させたスペクトログラムを示す。
+
+
+まず、(a)の喜び音声のスペクトルでを表示し、音声の音響的に異なる領域の境界を手動で設定する（縦の薄い白線）。
+次に、各境界線上でレベルが大きい部分に特徴点を手動で指定する（白点）。
+スペクトル画像の左上にあるAlphaのスライダーを0.5にして、もう一方の悲しみ音声のスペクトルをオーバーレイ表示させる。
+悲しみ音声のスペクトルが喜び音声のスペクトルになるべく一致するように、白線と特徴点を動かして調整する。
+これにより、時間方向と周波数方向の違いを小さくする。
+これらの図は、すべて調整が終わった後の状態を示している。
+目印として、設置した白線と白点の位置が同一であることが分かる。
+Synthesis ボタンと、Mrと書かれたスライダー（スペクトル画像の左下）により、整列された2つの音声のパラメタをスライダーに示された比率で混合して、
+モーフィング音声を合成する。
+ここで合成した音声を何度も聞き、モーフィング音声の劣化がなるべく小さくなるように特徴点の位置を繰り返し調整した。
+最後にSave Parameterボタンによりパラメタを保存する。
 
 
 
-% 本実験ではWORLDを基盤として開発されたツール群\cite{worldGUI}を用いて,実験刺激音の合成を行なった.ここではその詳細な手順を述べる.なお,これらのツール群はGitHubで公開されている\cite{worldGUIgit}.
+% ----------------------------------%
+\begin{figure}[t]
+  \vspace{-50pt}
+  \centering
 
-% \section{基本的な音声の分析と合成}
-% 音声合成の下準備として,worldHandlerを用いて音声の基本周波数,非周期成分,スペクトル包絡の分析を行った.\ref{fig:worldHand}にworldHandlerのGUIを示す.
+  \begin{tabular}{ccc}
+  \begin{minipage} {0.8\hsize}
+  \centering
+  \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6B/MorphAli_hap.eps}
+  \subcaption{}
+  \end{minipage}\\
+  
+  \begin{minipage} {0.8\hsize}
+  \centering
+  \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6B/MorphAli_sad.eps}
+  \subcaption{}
+  \end{minipage}\\
 
-% 左側のパネルには操作用のボタンが,右側のパネルには情報を可視化したものが表示されている.左側パネル最上段のRead Soundボタンのクリックにより,音声ファイルを選択して読み込む.次の段のFo extractionボタンのクリックにより,基本周波数が求められる.右側パネルの中段画面で,音声の有声区間と無声区間の境界線を手作業で調整できる.Play originalと,さらにその下のPlay VoicedとPlayUVボタンは,有声/無声境界を試聴で確認するためのものである.Aperiodicityボタンをクリックすると,設定された基本周波数と有声/無声境界に基づいて,非周期性指標が計算される.Spectrumボタンのクリックによりスペクトル包絡を求め,
-% Synthesisボタンで合成音声を作成して,分析結果をファイルとして保存する.
+  \begin{minipage} {0.8\hsize}
+  \centering
+  \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6B/MorphAli_50.eps}
+  \subcaption{}
+  \end{minipage} 
+  
+  \end{tabular}
+  
+  \caption{morpfhingAlignerの作業画面。2つの音声間の対応が調整された後の状態を示す。
+           (a)単語「なま」の喜び音声、(b)単語「なま」の悲しみ音声、(c)a,bの2つを透明度50\%で重ね合わせたもの。
+          }
+  \label{fig:morphAli} 
 
+\end{figure}
+% ----------------------------------%
 
-% \begin{figure}[h]
-% \vspace{20pt}
-% \centering
-% \includegraphics[width=0.8\hsize]{Figs/Exp2022/worldHandler_GUI.png}
-% \caption{worldHandlerのGUI}
-% \label{fig:worldHand}
-% \end{figure}
+% 3. 3 morphingAligner
+% 図 3 に、二つの事例間の対応の調整を支援するツールである morphingAligner の GUI を示す。
+% これらのスナップショットは、 対応が調整された後の状態を示している。
+% (a) が、固定して表示 されるスペクトログラムと、その上に配置された目印を示す。 
+% この例では男性による音声を固定されるものとして用いた。こ こでは Reference と名づけている。
+% (b) は、時間軸と時間周波数 上の点を操作して変形されたスペクトログラムを示している。 
+% この例では女性による音声を変形されるものとして用いた。こ こでは、Target と名づけている。
+% (c) は、スペクトログラムの透 明度を調整して、同じ透明度で重ねたものである。
+% 目印として 設置した白線と白円の位置が同一であることが分かる。
+% 実際の操作は、Reference と Target のパラメタを読み込んで、 同じ透明度で重ねた状態で、時間方向の目印を逐次的に増やし ながら位置を調整し、
+% 左側のグラフで示されている二つのスペ クトログラムの距離が減少するようにすることを繰り返すこと から始める。
+% 次に、位置の調整が終わったところで、両方の音 声の背景にある声道長の違いを左上のスライダーによって調整 する。
+% こうして、時間軸と声道長比の調整が終わったところで、 周波数方向の細かな違いを、目印を設定し位置を調整すること で、
+% さらに二つのスペクトログラムの違いが減少するように調 整する。
+% この調整結果をファイルに記録し、読み込んで再開す るためのボタンを用意している。
+% Synthesis ボタンと、Mr と書 かれたスライダーにより、整列された二つの事例のパラメタを、スライダーに示された比率で混合して、
+% モーフィング音声を合成する。
+% 二事例間のモーフィングの場合、割合を 0.5 とした場合が、二 つの事例のパラメタの整列の悪さの影響が最も大きく現れる。 
+% そのため、適切な整列の支援を目的とするこのツールでは、全 てのパラメタを同一の混合比で設定している。
+% 拡張されたモーフィングには、このような制約はない。
+% それ ぞれの音声パラメタの時刻毎にそれぞれ異なった混合割合を設 定することが可能なように構成されている。
+% また、そのための 合成関数も用意している。問題は、設定の自由度が大きいため、 どのように操作することができるようにするか、適切な概念を 設定しツールとして実装することが難しいことにある。
 
+\clearpage
 
-% \section{基本周波数と声道長の調整}
-% 男女1名ずつの原音声の声道長と基本周波数をworldManipulatorを用いて調整し,話者数を男女5名ずつに増やした.図\ref{fig:worldManip}にworldManipulatorのGUIを示す.
+%%--------------------------------------------------------------
+\section{morphingSoundGeneratorを用いた音声合成}
+\label{sec:morphingSoundGenarator}
+%%--------------------------------------------------------------
+morphingSoundGenaratorを用いると、モーフィングを行うパラメタの指定やモーフィング率を設定して一括で音声を合成できる。
+実際の作業画面を図\ref{fig:MSG}に示す。
 
-% 左の最上段のREAD Parameterボタンにより,worldHandlerにより分析され格納されたパラメタを読み込む.読み込まれたパラメタは,右側のパネルのグラフに可視化される.最上段は,波形とパワーの系列を示している.この表示とその下のスペクトログラムの表示,さらに最下部の基本周波数の表示は,MATLABの機能により時間軸が連動しており,拡大・移動などの操作は全ての表示に即座に反映される.
+まず、morpfhingAlignerで出力された「なみ」の喜び音声と悲しみ音声のぞれぞれのオブジェクトファイルを読み込み、SYNTHESISボタンで合成する。
+今回はMorphing rate settingを "connected" に設定し、全てのパラメタ（周波数軸、時間軸、スペクトルレベル、基本周波数、非周期性指標）に関して同じ比率でモーフィングを行う。
+次にモーフィングの端点を設定する。
+今回はモーフィング率を0から100\%に設定するため、 whole morphing rate のスライダーを一番左の0にし、ASSIGN Aボタンを押す。
+そして、スライダーを1にしてASSIGN Bボタンを押すことで反対側の端点を設定する。
+右にあるstepsを11に設定してGENERATEボタンを押すと、モーフィング率が0,10,20,30,40,50,60,70,80,90,100\%の音声が出力される。
+弁別実験では、このうちモーフィング率が 0,20,40,50,60,80,100\%の音声を使用した。
 
-% 基本周波数は,左パネルの3つのスライダーのうち中央のスライダーを操作することで調整できる.スライダー下部のボックスに直接数値を入力することでも操作可能である.声道長の調整には,3つのスライダーのうち右側のスライダーもしくはボックスを用いる.このようにして基本周波数と声道長を調整した音声は,SAVE Parameterボタンのクリックにより保存される.
+% ----------------------------------%
+\begin{figure}[h]
+  \vspace{10pt}
+  \centering
+  \includegraphics[width = 1\columnwidth]{Figure/Appendix/6B/MSG.eps} 
+  \caption{
+    morphingSoundGenaratorの操作画面
+    }
+  \label{fig:MSG}
+\end{figure}
+% ----------------------------------%
 
+%　本文より
+% まず、GUI上で図\ref{fig:MorphingAligner}左のように一方のスペクトルを表示し、音声の音響的に異なる領域の境界を手動で設定する（縦の薄い白線）。
+% 次に、各境界線上でレベルが大きい部分に特徴点を手動で指定する。
+% その後、この特徴点表示を残したままもう一方のスペクトルをオーバーレイ表示させる。
+% そこでこれらの点を、オーバーレイ表示させたスペクトルのレベルが大きい部分に、図\ref{fig:MorphingAligner}右になるように移動させる。
+% その上で、モーフィング率を指定して実行すると、この2つのスペクトル間を線形補完するようにスペクトル変形がなされ合成音が生成される。
+% ここでは、モーフィング率が 0,20,40,50,60,80,100\%の音声を合成した(0\%, 100\%の音声も分析合成系の影響を入れ込むため、合成している)。
+% 合成した音声を聞き、モーフィング音声の劣化がなるべく小さくなるように特徴点の位置を繰り返し調整した。
+% 実験者3名で、3組の感情対（「怒り--悲しみ」「悲しみ--喜び」「喜び--怒り」）を分担して作業を行った。
+% 最後に、全員が全ての合成音を聴取し、音質の確認を行った。
+% 確認した結果、1単語「おぼろづきよ」は他の単語よりモーフィングの際の劣化が目立ち、歪みを小さくすることができなかった。
+% また、感情単語として使われる状況を想像しやすいとは思えない。
 
-% \begin{figure}[h]
-% \vspace{20pt}
-% \centering
-% \includegraphics[width=0.8\hsize]{Figs/Exp2022/worldManipulator_GUI.png}
-% \caption{worldManipulatorのGUI}
-% \label{fig:worldManip}
-% \end{figure}
-
-% \section{モーフィング}
-% 音声モーフィングは2つのツールを用いて行う.morphingAlignerで音声のスペクトログラムに特徴点をつけ,その結果のパラメタをもとにmorphingSoundGeneratorでモーフィング率を設定してモーフィングする.
-
-% \subsection{morpfhingAligner}
-% 図\ref{fig:morpAligner} に,二つの事例間の対応の調整を支援するツールであるmorphingAlignerのGUIを示す.これらの図は,対応が調整された後の状態を示している.
-
-% (a)は,固定して表示されるスペクトログラムとその上に配置された目印を示す.この例では男性の「喜び」感情の音声を固定されるもの(Cannonical)として用いた.(b)は,時間軸と時間周波数上の点を操作して変形されたスペクトログラムを示す.この例では男性の「悲しみ」感情の音声を変形されるもの(NL-TFaxis)として用いた.(c)は,スペクトログラムの透明度を50\%に調整して重ねたものである.
-
-% 実際の操作は,まずCannonicalとNL-TFaxisのパラメタを読み込み,目印として縦の白線を入れて波形の重なりを調整する.次に,(b)のNL-TFaxisの表示にしてスペクトログラムに特徴点（白円）をつける.(a)のCannonical表示にすると,NL-TFaxisのスペクトログラムに打った特徴点が表示されるので,Canonnicalのスペクトログラムに合わせてずれをなくすように調整する.（c）のVariable表示で,２つのスペクトログラムが重なった状態を確認できる.最後に,Synthesisボタンを押すことで音声合成し,SAVE m-Objectボタンで操作結果をモーフィングオブジェクトとして保存する.
-
-
-% \begin{figure}[!ht]
-% \begin{center}
-% \subfigure[]{
-% \includegraphics[width=0.6\hsize]{Figs/Exp2022/morpA_GUI1.png}}
-% \vspace{10pt}
-
-% \subfigure[]{
-% \includegraphics[width=0.6\hsize]{Figs/Exp2022/morpA_GUI2.png}
-% \vspace{10pt}}
-
-% \subfigure[]{
-% \includegraphics[width=0.6\hsize]{Figs/Exp2022/morpA_GUI3.png}}
-% \vspace{10pt}
-
-% \end{center}
-% \caption{morphingAlignerのGUI}
-% \label{fig:morpAligner}
-% \vspace{50pt}
-% \end{figure}
-
-% \newpage
-% \subsection{morphingSoundGenerator}
-% morphingAlignerで保存されたモーフィングオブジェクトを読み込み,モーフィング率を調整してモーフィングする.図\ref{fig:morphSG}にmorphingSoundGeneratorのGUIを示す.
-
-% READ LボタンとREAD Rボタンをクリックし,それぞれモーフィングオブジェクトを読み込む.この例では,L側に男声の「喜び」感情音声,R側に男声の「悲しみ」感情音声を読み込んでいる.複数あるスライダーの内,最上部のスライダーで全体のモーフィング率を操作できる.SYNTHESISボタンをクリックしてから,スライダーの任意の位置をクリックすると,即座にそのモーフィング率の音声が再生される.下の4つのスライダーでは5つの属性（周波数軸・時間軸・スペクトルレベル・基本周波数・非周期成分）のモーフィング率を個別に設定できる.本実験では,全体のモーフィング率だけを操作した.スライダーを0にした状態,すなわち「喜び」割合100\%の状態でASSIGN　Aボタンを,スライダーを1にした状態,すなわち「喜び」割合0\%の状態でASSIGN Bボタンをクリックして状態をそれぞれ割り当てる.これにより,AとB,つまり「喜び」割合が$0 \sim 100$\%の間でモーフィングが可能となる.右側のstepsで作成する刺激連続体の個数を選択して,CHECKボタンで音声を聴いて確認できる.この例では,stepsは11なので「喜び」割合が0,10,20,30,40,50,60,70,80,90,100\%のモーフィング音が合成される.GENERATEボタンをクリックすると,音声が合成され,wavファイルとして保存される.ここで保存された音声が,実際に実験に用いた刺激音である.
-
-
-% \begin{figure}[h]
-% \vspace{20pt}
-% \centering
-% \includegraphics[width=0.8\hsize]{Figs/Exp2022/MSG_GUI.png}
-% \caption{morphingSoundGeneratorのGUI}
-% \label{fig:morphSG}
-% \end{figure}
