--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -5367,4 +5367,13 @@ Praat, a system for doing phonetics by computer.
   year={2024},
 }
 
-
+@article{kawahara2022WORLDGUI_J,
+  title={音声分析合成基盤WORLDのGUI実装と見えてきた課題},
+  author={河原英紀 and 森勢将雅},
+  journal={電子情報通信学会技術研究報告},
+  volume={122},
+  number={81},
+  pages={3--6},
+  year={2022},
+  publisher={電子情報通信学会}
+}
