--- a/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025/3_ExpAngHapSad.tex
@@ -23,10 +23,8 @@
 \label{sec:PrepareStimuli}
 % ------------------------------
 感情を最もよく表現する音声の抽出を行い、音声モーフィングと模擬難聴処理で実験刺激を作成した。
-\textcolor{red}{3人で分担してやった}
-
 % ------------------------------
-\subsubsection{感情音声の再分類 \textcolor{red}{付録にスクリーニング結果入れる？}}
+\subsubsection{感情音声の再分類}
 % ------------------------------
 使用した音声データベースは慶應義塾大学研究用感情音声データベース（Keio-ESD）\cite{keioESD-J}である。
 このデータベースには、舞台経験のある一般人男性（32歳）1名が、20単語それぞれを47通りの感情(以下では元感情と呼ぶ)で発声した940音声に、
@@ -38,6 +36,7 @@
 47元感情・11単語の音声を全て聞き、エクマンの基本6感情（喜び・悲しみ・怒り・恐怖・嫌悪・驚き）\cite{ekman1992argument}に分類した。
 この中から、「怒り」「悲しみ」「喜び」に分類された音声は176音声（11単語 $\times$ 16元感情）であった。
 この3つの感情を選択した理由は、多くの研究で一般的に用いられていて、本研究のアプローチの第一歩として適していると考えたためである。
+詳細な手続きは付録\ref{sec:DBScreening}にて述べる。
 
 \newpage
 
@@ -65,13 +64,14 @@ PC2まで、累積寄与率84\%を占めた。
 
 % \newpage
 % ------------------------------
-\subsubsection{音声モーフィング \textcolor{red}{詳細は付録****へ}}
+\subsubsection{音声モーフィング}
 \label{sec:morphAngSadHap}
 % ------------------------------
 
 抽出した33音声(11単語\time 3感情)について、
 音声分析変換合成システムWORLD\cite{morise2016world}を用いた音声モーフィング用のGUI\cite{kawahara2024interactive}で、
 感情間の中間の音声を合成した。
+ここでは簡単に概要を説明し、詳細な手続きは付録\ref{sec:MorphingAppendix}で述べる。
 図\ref{fig:MorphingAligner}に、例として単語「なみ」の喜び音声と悲しみ音声のWORLDスペクトルと、モーフィングのための特徴点を示す。
 
 まず、GUI上で図\ref{fig:MorphingAligner}左のように一方のスペクトルを表示し、音声の音響的に異なる領域の境界を手動で設定する（縦の薄い白線）。
@@ -112,7 +112,7 @@ PC2まで、累積寄与率84\%を占めた。
 
 \newpage
 % ------------------------------
-\section{実験手順と実験条件\textcolor{red}{実験webのスクショを入れる,webページの雛形のgiturlも引用する}}
+\section{実験手順と実験条件}
 \label{sec:ExpCondition}
 % ------------------------------
 前節で述べた実験刺激を用いて、若年健聴者と高齢者を対象に感情弁別実験を行った。
@@ -122,7 +122,8 @@ PC2まで、累積寄与率84\%を占めた。
 実験には恒常法を用い、基準となるモーフィング率50\%の音声(標準刺激)と、その他のモーフィング率の音声(比較刺激)を1対で順番に提示した。
 手掛語として表示される感情ラベル（例えば悲しみ）に、どちらの音声が近いかを二肢強制選択で回答させた。
 この手掛語（悲しみ）の実験が終わった後、対の手掛語（喜び）の実験を全く同じ刺激を用いて行った。
-全ての実験は防音室内で専用のWebページを用いて行った。
+全ての実験は防音室内で専用のWebページ\cite{AMLAB_WebOpen}を用いて行った。
+実際の実験Webページのスクリーンショットを図\ref{fig:Expweb}に示す。
 
 
 % ------------------------------
@@ -136,8 +137,8 @@ PC2まで、累積寄与率84\%を占めた。
 
 また、感情判断においてバイアスがないかを調べるために、判断させる感情を入れ替えて2回実験した。
 具体的に、例えば悲しみ--喜び対の実験で説明する。
-まず、全240対の比較において、「悲しみ」という手掛語を提示し、どちらの音声がより「悲しみ」に聞こえるかを判断させた。
-その後、全く同じ実験刺激対を用いて、手掛語をもう一方の感情（喜び）に入れ替えて判断させ、反応バイアスがあるかどうかを調べた。
+まず、全240対の比較において、「悲しみ」という手掛語を提示し、どちらの音声がより「悲しみ」に聞こえるかを判断させた（図\ref{fig:Expweb}左）。
+その後、全く同じ実験刺激対を用いて、手掛語をもう一方の感情（喜び）に入れ替えて判断させ、反応バイアスがあるかどうかを調べた（図\ref{fig:Expweb}右）。
 すなわち、1人の実験参加者は、全480対を聴取した。
 どちらの手掛語が先かや、どの感情対の実験から始めるかは、参加者間でバランスを取った。
 
@@ -178,6 +179,30 @@ PC2まで、累積寄与率84\%を占めた。
 音圧レベルの測定には、人工耳（Br\"{u}el \& Kj\ae r, Type\,4153）とマイクロホン（Br\"{u}el \& Kj\ae r, Type\,4192）、騒音計（Br\"{u}el \& Kj\ae r, Type\,2250-L）を用いた。
 なお、感覚レベル(Sensation Level)でそろえなかったのは、同じ音圧レベルの話かけに対して同じように聞こえるかを調べるためである。
 聴力レベルが低下していても、十分に聞こえることを確認した。
+
+
+
+\begin{figure}[h]
+  \vspace{10pt}
+  \begin{tabular}{cc}
+  \begin{minipage} {0.47\hsize}
+  \centering
+  \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/FigWeb_sad.eps}
+  \end{minipage} & 
+  
+  \begin{minipage} {0.47\hsize}
+  \centering
+  % \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/Fig_RusselCircle_b.eps }
+  \includegraphics [ width = 1\columnwidth]{Figure/ExpAngHapSad/FigWeb_hap.eps }
+  \end{minipage}
+  
+  \end{tabular}
+  
+  \caption{実験用Webページのスクリーンショット。悲しみ--喜び実験の場合。左：手掛語「悲しみ」、右：手掛語「喜び」。
+            }
+  \label{fig:Expweb} 
+
+\end{figure}
 
 
 \newpage
@@ -235,8 +260,9 @@ PC2まで、累積寄与率84\%を占めた。
 \subsection{統計的分析}
 \label{sec:Statistics}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布\textcolor{red}{p-dignifitを使った、文献も引く}を当てはめ、心理物理曲線を推定した。
-そして、50\%の回答率におけるモーフィング率である主観的等値点（PSE）と、50\%と76\%の回答率間のモーフィング率の差である弁別閾（JND）を算出した。
+上記の観察結果を統計的いに明確化するため、図\ref{fig:ExpRsltEmoPercent}(b)$\sim$(g)の回答曲線に累積ガウス分布を当てはめ、心理物理曲線を推定した。
+推定には、ベイズ法による推定手法psignifit\cite{schutt2016painfree}を用いた。
+そして、50\%の回答率におけるモーフィング率である主観的等値点（PSE）と、50\%と76\%の回答率間のモーフィング率の差である弁別閾（JND）を算出した。 
 図\ref{fig:JNDPSE_AngSadHap}(a)にJND、(b)にPSEの、参加者間の平均値と95\%信頼区間を示す。
 上述したように、手掛語によるバイアスはほとんどみられなかったため、反復測定として感情対ごとにまとめた。
 図左側が若年健聴者模擬難聴なし（YNH-Unpro）、中央が若年健聴者模擬難聴あり（YNH-80yr）、右側が高齢者（Older-Unpro）の結果である。
@@ -312,7 +338,7 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 直感的には、「快--不快」の判断は少なくとも若年健聴者にとっては容易に思われ、年齢が上がるにつれて難しくなっていくとは予想されにくい。
 このことを確かめるためには、「快」かつ「沈静」の象限に位置するCalm（「落着き」）を加えて、今回対象とした3感情との弁別実験を行うことが良いかもしれない。
 % ただし、今回の実験で用いたのが男性1名のみで、限られた単語数の音声であったために、このような結果になった可能性も否定できない。
-\textcolor{red}{考察の概念図入れる}
+% \textcolor{red}{考察の概念図入れる}
 
 
 
