--- a/Thesis2025_Hanatani/Thesis2025/6C_Appendix_RsltIndiv.tex
+++ b/Thesis2025_Hanatani/Thesis2025/6C_Appendix_RsltIndiv.tex
@@ -1131,6 +1131,79 @@
 %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 
 
+\clearpage
+
+\begin{figure}[h]
+
+  % \begin{center}
+
+  \vspace {-20pt}
+  \begin{tabular}{ccc}
+    
+    \begin{minipage} {0.31\hsize}
+    \centering
+    \includegraphics[ width = 1\columnwidth]{Figure/Appendix/6C/Calm_Eld/Fig_Eld_MTY_cal-ang_Task1.eps }
+    　 %スペース
+    \end{minipage}&
+    
+    \begin{minipage} {0.31\hsize}
+    \centering
+    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6C/Calm_Eld/Fig_Eld_MTY_cal-sad_Task1.eps }
+    MTYの結果
+    \end{minipage} &
+    
+    \begin{minipage} {0.31\hsize}
+    \centering
+    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6C/Calm_Eld/Fig_Eld_MTY_cal-hap_Task1.eps }
+    　
+    \end{minipage} 
+    
+  \\  %% 改行  %%%%%%%%%%%%%%%%%%%%% 
+
+    \begin{minipage} {0.31\hsize}
+    \centering
+    \includegraphics[ width = 1\columnwidth]{Figure/Appendix/6C/Calm_Eld/Fig_Eld_MUT_cal-ang_Task1.eps }
+    　 %スペース
+    \end{minipage}&
+    
+    \begin{minipage} {0.31\hsize}
+    \centering
+    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6C/Calm_Eld/Fig_Eld_MUT_cal-sad_Task1.eps }
+    MUTの結果
+    \end{minipage} &
+    
+    \begin{minipage} {0.31\hsize}
+    \centering
+    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6C/Calm_Eld/Fig_Eld_MUT_cal-hap_Task1.eps }
+    　
+    \end{minipage} 
+
+  \end{tabular}
+
+  \vspace {-6pt}
+  \caption{【落着き実験】高齢者結果 その3}
+
+  % \label{fig:}
+
+  \vspace {-12pt}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
