--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -618,17 +618,17 @@ url={https://web.wakayama-u.ac.jp/〜irino/ExpWeb/ExpSpIntel/}
 
 
 @article{irino2006dynamic,
-  title = {{A dynamic compressive gammachirp auditory filterbank.}},
+  title = {A dynamic compressive gammachirp auditory filterbank},
   author={Irino, Toshio and Patterson, Roy D},
   journal={IEEE trans. ASLP},
   volume={14},
   number={6},
-    pages = {2222--2232},
-    volume = {14},
-    year={2006},
-    doi = {10.1109/TASL.2006.874669},
-    issn = {1558-7916},
-    pmid = {19330044},
+  pages = {2222--2232},
+  volume = {14},
+  year={2006},
+  doi = {10.1109/TASL.2006.874669},
+  issn = {1558-7916},
+  pmid = {19330044},
   publisher={IEEE}
 }
 
@@ -5377,3 +5377,10 @@ Praat, a system for doing phonetics by computer.
   year={2022},
   publisher={電子情報通信学会}
 }
+
+@misc{AMLAB_WebOpen,
+  title = {和歌山大学聴覚メディア研究室 聴取実験用ウェブページ},
+  url = {https://github.com/AMLAB-Wakayama-Local/ExpWebOpen},
+  year = {2021}
+}
+
