--- a/Thesis2025_Hanatani/Thesis2025/6D_Appendix_CorrJND.tex
+++ b/Thesis2025_Hanatani/Thesis2025/6D_Appendix_CorrJND.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 弁別実験を通して、高齢者は健聴・難聴に関わらず若年健聴者よりもJNDが大きく、弁別精度が下がることがわかった。
 したがって、聴力レベル以外の要因がJNDとの関係性があるかもしれない。
-そこで、JNDとさまざまな要素との相関関係を調査したが、全てにおいて強い相関は見られなかった。
+そこで、JNDとさまざまな要素との相関関係を調査したが、ほぼ全てにおいて強い相関は見られなかった。
 それぞれの結果について報告する。
 
 
@@ -18,7 +18,14 @@
 まず、結果全体の傾向を把握するために、怒り・悲しみ・喜び実験、落着き実験結果におけるJNDと年齢、平均聴力レベルの相関を分析した。
 結果をそれぞれ図\ref{fig:CorrAge}、図\ref{fig:CorrAud}に示す。 
 
- 
+図\ref{fig:CorrAge}には、JNDと年齢について若年健聴者Unproと高齢者結果を手掛語別にプロットしている。
+また、それぞれの聴取者群結果と聴取者全体の結果の回帰直線を描画した。
+相関分析の結果、喜び--怒り対で中程度の正の相関があった（p $<$ 0.01, r = 0.68）。
+この結果は、高齢者において喜び--怒り対の判断が難しかったことと整合性がある。
+また、怒り--落着き対（p $<$ 0.01, r = 0.51）、悲しみ--落着き対（p $<$ 0.01, r = 0.39）、喜び--落着き対（p $<$ 0.01, r = 0.57）、で正の相関が見られたが、
+JNDが40\%以上の値を外れ値とみなすと相関はほとんどないと言えるだろう。
+
+
 
 %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 \begin{figure}[h]
@@ -63,10 +70,10 @@
   \end{tabular}
 
   \vspace {-6pt}
-  \caption{全実験参加者のJNDと年齢との相関分析結果。左上から、怒--悲、悲–-喜、喜-–怒、怒--落、悲–-落、喜-–落実験結果。
+  \caption{全実験参加者のJNDと年齢との相関。左上から、怒--悲、悲–-喜、喜-–怒、怒--落、悲–-落、喜-–落実験結果。
            縦軸はJND、横軸は実験実施時の年齢。
-           ◯:若年健聴者、♢:高齢者。手掛語（赤:怒り、青:悲しみ、 緑:喜び、 黄:落着き）。 
-          %  回帰直線を、赤線:若年健聴者結果、青線:高齢者結果、ピンク線:全参加者結果で示す。
+           ○:若年健聴者(Unpro)、◇:高齢者。手掛語（赤:怒り、青:悲しみ、 緑:喜び、 黄:落着き）。 
+           回帰直線を、赤線:若年健聴者(Unpro)、青線:高齢者、ピンク線:若年健聴者(Unpro)+高齢者で示す。
           }
 
   \label{fig:CorrAge}
@@ -75,12 +82,28 @@
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 
+
+図\ref{fig:CorrAud}には、JNDと平均聴力レベルについて若年健聴者Unpro、若年健聴者80yr、高齢者結果を手掛語別にプロットしている。
+% また、それぞれの聴取者群結果と聴取者全体の結果の回帰直線を描画した。
+ここでは、若年健聴者80yrの平均聴力レベルを、若年健聴者の平均聴力レベルに模擬難聴処理で模擬した80歳の平均聴力レベル\cite{tsuiki2002nihon}を加算した値に設定した。
+相関分析の結果、喜び--怒り対で中程度の正の相関があった（p $<$ 0.01, r = 0.36）。
+若年健聴者80yrの結果を除いた場合、強い正の相関が見られた（p $<$ 0.01, r = 0.77）。
+この結果は、聴覚末梢系の機能低下が感情知覚に影響している可能性があるということと整合性がある。
+また、怒り--落着き対（p $<$ 0.05, r = 0.26）、悲しみ--落着き対（p $<$ 0.05, r = 0.27）、喜び--落着き対（p $<$ 0.05, r = 0.25）、で弱い正の相関が見られたが、
+やはり外れ値を除くと相関はほとんどないと言えるだろう。
+全体的に見ると、若年健聴者80yrより高齢者の方が平均聴力レベルが小さい傾向にあるが、JNDのばらつきが大きい。
+一方で、若年健聴者80yrは若年健聴者Unproとほぼ同程度の高さに位置しており、つまり模擬難聴処理の有無でJNDに大きな変化はなかったことがわかる。
+したがって、単純に聴力レベルだけが感情知覚に影響しているのではなく、他の要因も何かしら影響していると考えられる。
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 \begin{figure}[h]
 
   % \begin{center}
 
-  % \vspace {-20pt}
+  \vspace {10pt}
   \begin{tabular}{ccc}
     
     \begin{minipage} {0.31\hsize}
@@ -102,23 +125,23 @@
 
     \begin{minipage} {0.31\hsize}
     \centering
-    \includegraphics[ width = 1\columnwidth]{Figure/Appendix/6D/Fig_Scat_Agram-JND_Mean4_sad-ang.eps }
+    \includegraphics[ width = 1\columnwidth]{Figure/Appendix/6D/Fig_Scat_Agram-JND_Mean4_cal-ang.eps }
     \end{minipage}&
     
     \begin{minipage} {0.31\hsize}
     \centering
-    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6D/Fig_Scat_Agram-JND_Mean4_hap-sad.eps }
+    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6D/Fig_Scat_Agram-JND_Mean4_cal-sad.eps }
     \end{minipage} &
     
     \begin{minipage} {0.31\hsize}
     \centering
-    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6D/Fig_Scat_Agram-JND_Mean4_ang-hap.eps }
+    \includegraphics [ width = 1\columnwidth]{Figure/Appendix/6D/Fig_Scat_Agram-JND_Mean4_cal-hap.eps }
     \end{minipage} 
 
   \end{tabular}
 
   \vspace {-6pt}
-  \caption{全実験参加者のJNDと平均聴力レベルとの相関分析結果。}
+  \caption{全実験参加者のJNDと平均聴力レベルとの相関。▲:若年健聴者(80yr)。黒線:若年健聴者(Unpro)+若年健聴者(80yr)+高齢者の回帰直線。}
 
   \label{fig:CorrAud}
 
@@ -128,7 +151,10 @@
 
 
 
-
+% ------------------------------
+\section{TMTFとの相関}
+% ------------------------------
+怒り・悲しみ・喜び実験参加者には、本研究室で同時期に行なっていたTMTF測定に参加してもらったため、TMTFの測定値との相関も調べた。
 
 
 
