--- a/Thesis2025_Hanatani/Thesis2025/Fig4_JNDPSE_AngSadHap.tex
+++ b/Thesis2025_Hanatani/Thesis2025/Fig4_JNDPSE_AngSadHap.tex
@@ -28,6 +28,7 @@
   
   \vspace {-6pt}
   \caption{実験条件（YNH-Unpro,YNH-80yr,Older-Unpro）ごとにおけるJND(a)とPSE(b)の参加者全体の平均値と、95\%信頼区間。
+            点線はJND,PSEそれぞれの全条件の平均値を示す。
             (c)はYNH-Unpro、高齢健聴群（ONH）、高齢者難聴群（OHL）のJNDの平均値と95\%信頼区間。
             各3組のバーグラフは感情対に対応。怒り (Angry, A), 悲しみ (Sad, S), 喜び (Happy,H) の2つの組み合わせで表示。
             Tukey HSDの多重比較検定（有意水準 5\%）の結果も示す。}
