--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -5149,6 +5149,17 @@ Praat, a system for doing phonetics by computer.
 
 %%------------- ここから新たに追加 ----------------%%
 
+@article{livingston2024dementia-Short,
+  title={Dementia prevention, intervention, and care: 2024 report of the Lancet standing Commission},
+  author={Livingston, Gill and Huntley, Jonathan and  others},
+  journal={The Lancet},
+  volume={404},
+  number={10452},
+  pages={572--628},
+  year={2024},
+  publisher={Elsevier}
+}
+
 @book{ogushi2019Book,
     title={音響聴覚心理学},
     author={大串健吾},
