--- a/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025/1_Intro.tex
@@ -13,19 +13,20 @@
 \label{sec:研究背景}
 超高齢社会となった日本では、加齢性難聴者の増加が懸念されている。
 聴力低下は、音声による対人コミュニケーションを妨げ、生活の質(QOL)の低下を招く。
-また、認知症リスクを高める最大要因であることがLancet委員会により報告されている\cite{livingston2020dementia}。
+また、認知症リスクを高める最大要因であることがLancet委員会により報告されている\cite{livingston2024dementia-Short}。
 高齢者との円滑なコミュニケーションのためには、音声の言語情報ばかりではなく、感情を含む非言語情報も重要である。
 特に感情(情動)は、言語情報と異なり曖昧で、高齢者にどの程度意図した通りに伝達できるかの特性もまだよくわかっていない。
 これまでに、加齢により感情認識精度が低下することが報告されている\cite{paulmann2008aging,ben2019age,amorim2021changes}。
 特に否定的な感情に関して低下するという報告もある\cite{mill2009age}。
 また、従来からの補聴器で音声了解度の改善は行うことができるが、感情伝達特性の向上には貢献しないことが報告されている\cite{goy2018hearing}。
-感情知覚機能の低下の要因は、聴覚末梢系の機能低下による聴力レベルによるものだけとは考えられてはいない。
-しかしながら、明確にそのことを示す実験データは存在しないようである。
-また、末梢系から認知系のどの部位の機能低下によるものかも解明されていない。
+このような課題を克服した音声伝達の支援手段開発のためには、まずは高齢者の感情知覚特性・感情伝達特性を把握する必要がある。
+そのためにも、感情知覚の精度低下が聴覚系においてどのように起こっているかを解明しなければならない。
+精度低下の要因は、聴覚末梢系の機能低下による聴力レベルによるものだけとは考えられてはいない。
+しかしながら、明確にそのことを示す実験データは存在せず、末梢系から認知系のどの部位の機能低下によるものかも解明されていない。
 そこで、まずは聴覚末梢系の機能低下だけが、感情知覚にどの程度影響するかの調査を試みた。
-若年健聴者に模擬難聴処理を行った音声を聴かせ、通常音声を聴いた場合との感情知覚の相違を実験的に検討した。
-さらに、高齢者の感情知覚特性を、同じ通常音声を用いて同じ手順で測定した。
-若年健聴者との相違から知覚特性の情報を得ることを目指した。
+% 若年健聴者に模擬難聴処理を行った音声を聴かせ、通常音声を聴いた場合との感情知覚の相違を実験的に検討した。
+% さらに、高齢者の感情知覚特性を、同じ通常音声を用いて同じ手順で測定した。
+% 若年健聴者との相違から知覚特性の情報を得ることを目指した。
 
 % SciRep
 % 難聴（HL）を抱える高齢者の数は多くの国で増加している。
@@ -61,17 +62,17 @@
 本研究の目的は、高齢者の感情知覚特性について調査することである。
 将来的には、その特性を定式化し、補聴器の開発や高齢者との円滑なコミュニケーションに貢献することを目標としている。
 
-本研究では、2つの実験を実施する。
-1つ目は、若年健聴者実験である。
+本研究では、若年者と高齢者に分けて実験を実施する。
+若年健聴者実験では、
 若年健聴者に難聴者の聞こえを体験させる「模擬難聴システムWHIS」（以下WHIS）を用いた聴取実験を行い、模擬難聴が感情知覚に与える影響を調査する。
 通常音声を聞いた場合と、模擬難聴処理した音声を聞いた場合の結果に差異があるかどうかを確かめる。
 WHISを用いて実験を行う理由は以下である。
 加齢性難聴の原因は様々であり、聴覚末梢系の機能低下によるものか、中枢系・認知系の機能低下によるものかの切り分けが困難である。
 どの原因がどの程度感情知覚に影響するのかを段階的に調査するために、まずは模擬難聴処理で聴覚末梢系の機能低下だけを模擬することにした。
-したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う（詳しくは第\ref{chap:ExpAngHapSad}章で説明する）。
+したがって、WHISで処理した音声を聞いた若年健聴者を「模擬難聴者」として実験を行う。
+% （詳しくは第\ref{chap:ExpAngHapSad}章で説明する）。
 
-2つ目は、高齢者実験である。
-若年健聴者実験と同じ通常音声・手順で実験的に測定を行う。
+高齢者実験では、若年健聴者実験と同じ通常音声・手順で実験的に測定を行う。
 若年健聴者結果と比較することで、聴覚末梢系の機能低下による感情知覚への影響があるかどうかを検証する。
 また、聴覚末梢系の機能低下以外の要因も調査できると考え、実施することにした。
 
