--- a/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025/Reference_29Dec24b.bib
@@ -5395,3 +5395,22 @@ Praat, a system for doing phonetics by computer.
   year = {2021}
 }
 
+@article{Sek2012TFS1,
+  title={Implementation of two tests for measuring sensitivity to temporal fine structure},
+  author={Sek,Aleksander  and Moore, Brian C J},
+  journal={International Journal of Audiology},
+  volume={51},
+  number={1},
+  pages={58--63},
+  year={2012},
+  publisher={Taylor & Francis}
+}
+
+
+@inbook{Sek2022Guide,
+ title={Guide to Psychoacoustics, CHAPTER 19, Sensitivity to Temporal Fine Structure: The TFS1 Test},
+ author={Sek,Aleksander  and Moore, Brian C J},
+ publisher={Adam Mickiewicz University Press},
+ pages={136--143},
+ year={2022}
+}
