--- a/Thesis2025_Hanatani/Thesis2025_v2/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/3_ExpAngHapSad.tex
@@ -50,8 +50,8 @@
 この結果の第1主成分（PC1）と第2主成分（PC2）の分布を図\ref{fig:PCA-Russel_AngHapSad}(a)に示す。
 
 PC2まで、累積寄与率84\%を占めた。
-この図では、図\ref{fig:PCA-Russel_AngHapSad}(b)に示すラッセルの円環モデル\cite{russell1980circumplex}内の感情語の位置となるべく近くなるように、%配置を調整した。
-\textcolor{red}{横軸をPC2とし、縦軸をPC1の符号を反転させたものとしている。}
+この図では、\textcolor{red}{横軸をPC2とし、縦軸をPC1の符号を反転させたものとしている。
+このようにして、図\ref{fig:PCA-Russel_AngHapSad}(b)に示すラッセルの円環モデル\cite{russell1980circumplex}内の感情語の位置が近くなるようにした。}
 比較すると、PC2が快--不快の軸で、PC1の逆符号が覚醒--沈静の軸とおおまかに一致することがわかる。
 また、中心から三角形の頂点に向かう線に沿うように分布している。
 各単語ごとに、三角形の頂点に近く原点から離れた音声、つまり最も「怒り」「悲しみ」「喜び」らしい単語を16元感情\textcolor{red}{$<<<$前項に記載。16感情ラベルの方が良いか？$>>>$}の中から抽出した。
@@ -91,8 +91,8 @@ PC2まで、累積寄与率84\%を占めた。
 図\ref{fig:ExpRsltEmoPercent}(a)にその音声の配置の概念図を示す。
 \textcolor{red}{
   図\ref{fig:PCA-Russel_AngHapSad}(a)に示した主成分分析結果に重ねて、作成したモーフィング音声の配置を模式的に示している。
-  前項でも述べた通り、各単語ごとに原点から最も離れた音声を採用しているため、
-  モーフィング率100\%ないし0\%の音声は概念図上の感情ラベル（Ang,Hap,Sad）の付近に位置している。
+  % 前項でも述べた通り、各単語ごとに原点から最も離れた音声を採用しているため、
+  % モーフィング率100\%ないし0\%の音声は概念図上の感情ラベル（Ang,Hap,Sad）の付近に位置している。
   図中のx印はモーフィング率50\%、○印は20,40,60,80\%の音声を示す。
   }
 
@@ -262,11 +262,12 @@ PC2まで、累積寄与率84\%を占めた。
   しかし、Millらによると、最も認識精度が低下したのは「悲しみ」であり、その次に「怒り」であったため、この知見に従うならば
   悲しみ--怒りの弁別が難しくなるように思える。
   しかしながら、悲しみ--怒り対は健聴者と同程度の弁別精度であったため、単純に感情認識精度の低下が影響しているわけではないと考えられる。
-  また、すべての高齢参加者は、質問の受け答えや実験における操作の理解等に問題はなかったため、認知機能の低下による影響も考えにくい。
+  % また、すべての高齢参加者は、質問の受け答えや実験における操作の理解等に問題はなかったため、認知機能の低下による影響も考えにくい。
+  喜びと怒りという特定の組み合わせでのみ弁別が困難である要因を別の視点から探る必要があるだろう。
 }
 % 高齢者の感情認知の特徴-若干意味重視（Ben）-文化的背景-知識
 
-その一方で、若年健聴者においては、喜び--怒り対の感情弁別が難しかったという報告は2件のみであり、どの感情対も同程度の難しさだと報告した参加者がほとんどであった。
+一方、若年健聴者においては、喜び--怒り対の感情弁別が難しかったという報告は2件のみであり、どの感情対も同程度の難しさだと報告した参加者がほとんどであった。
 高齢者と若年健聴者の違いは、考慮すべき最も重要な発見であると言えるだろう。
 
 
@@ -319,7 +320,8 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 高齢者難聴群の喜び--怒り(H--A)対とその他の全実験条件・感情対、
 高齢者健聴群の喜び--怒り(H--A)対と高齢者健聴群のその他の感情対・若年健聴者の全感情対で有意差があった。
 この結果は、高齢者は健聴・難聴に関わらず喜び--怒り(H--A)対の弁別が難しかったことを示している。
-さらに、高齢者喜び--怒り(H--A)対では、健聴群と難聴群の間でも有意差が見られたことから、年齢が上がるにつれて弁別が難しくなる可能性が示唆された。
+さらに、高齢者喜び--怒り(H--A)対では、健聴群と難聴群の間でも有意差が見られたことから、
+\textcolor{red}{聴力レベルに関わらず}弁別が難しくなる可能性が示唆された。
 
 
 
