--- a/Thesis2025_Hanatani/Thesis2025_v2/Fig3_ResultPsycho_AngSadHap.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/Fig3_ResultPsycho_AngSadHap.tex
@@ -2,8 +2,8 @@
 %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
 % モーフィングの概念図と心理物理曲線（AngSadHap）
 %%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%% 
-\begin{figure}[t]
-  % \vspace {-20pt}
+\begin{figure}[h]
+  \vspace {7pt}
   %%%%%%%%%%%%%%%%%%%%% 上段 morphing 図 %%%%%%%%%%%%%%%%%%%%% 
   
   \begin{center}
