--- a/Thesis2025_Hanatani/Thesis2025_v2/Fig9_RusselPCA_Eld.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/Fig9_RusselPCA_Eld.tex
@@ -3,19 +3,32 @@
 
 
 % ----------------------------------%
-% PCA Eld
-\begin{figure}[t] 
-  % \vspace{-8pt}
-   \begin{center} 
-     \hspace{-20pt}
-         \includegraphics[width = 0.7\columnwidth]{Figure/ExpCalm/FigPCA3dEld_CumAll_cal2_scatter_SndTriangle_Eng_RotateC.eps}
-        \vspace{-3pt}
-         \caption{高齢者による感情尺度評定の主成分分析 (PCA) 結果. 図\ref{fig:PCA-Russel_Calm}の若年健聴者結果に対応。}
-          \label{fig:PCA_Eld}
-     \end{center}  
-  % \vspace{-13pt}
- \end{figure}
- % ----------------------------------%
+% PCA Eld  and YNH7
+
+ \begin{figure*}[t]
+  % \vspace{-18pt}
+  
+    \begin{tabular}{cc}
+    % \hspace{-32pt}
+    \begin{minipage} {0.5\hsize}
+    \centering
+    \includegraphics[ width = 1\columnwidth]{Figure/ExpCalm//FigPCA3dYNH7_CumAll_cal2_scatter_SndTriangle_Eng.eps}
+    \subcaption{若年健聴者7名の結果}
+    \end{minipage}&
+    \hspace{-22pt}
+    
+    \begin{minipage} {0.5\hsize}
+    \centering
+    \includegraphics [ width = 1\columnwidth]{Figure/ExpCalm/FigPCA3dEld_CumAll_cal2_scatter_SndTriangle_Eng_RotateC.eps} 
+    \subcaption{高齢者11名の結果}
+    \end{minipage} 
+  
+  
+  \end{tabular}
+  
+  \caption{実験者3名を含む若年健聴者7名と高齢者11名による感情尺度評定の主成分分析 (PCA) 結果。 図\ref{fig:PCA-Russel_Calm}の若年健聴者（実験者3名）結果に対応。}
+  \label{fig:PCA_Eld-YNHNew}
+\end{figure*}
 
 
 % % ---------------------------------------
