--- a/Thesis2025_Hanatani/Thesis2025_v2/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/3_ExpAngHapSad.tex
@@ -80,10 +80,12 @@ PC2まで、累積寄与率84\%を占めた。
 そこでこれらの点を、オーバーレイ表示させたスペクトルのレベルが大きい部分に、図\ref{fig:MorphingAligner}右になるように移動させる。
 その上で、モーフィング率を指定して実行すると、この2つのスペクトル間を線形補完するようにスペクトル変形がなされ合成音が生成される。
 ここでは、モーフィング率が 0,20,40,50,60,80,100\%の音声を合成した(0\%, 100\%の音声も分析合成系の影響を入れ込むため、合成している)。
+
 合成した音声を聞き、モーフィング音声の劣化がなるべく小さくなるように特徴点の位置を繰り返し調整した。
 実験者3名で、3組の感情対（「怒り--悲しみ」「悲しみ--喜び」「喜び--怒り」）を分担して作業を行った。
 最後に、全員が全ての合成音を聴取し、音質の確認を行った。
-確認した結果、1単語「おぼろづきよ」は他の単語よりモーフィングの際の劣化が目立ち、歪みを小さくすることができなかった。
+\textcolor{red}{音声にざらつきや雑音がないか、聞いた際に違和感がないかに注意して確認した。}
+その結果、1単語「おぼろづきよ」は他の単語よりモーフィングの際の劣化が目立ち、歪みを小さくすることができなかった。
 % また、感情単語として使われる状況を想像しやすいとは思えない。
 そこで、残りの10単語を実験刺激として用いることとした。
 これにより、10単語\time 7モーフィング率\time 3感情間の合計210音声を準備した。
