--- a/Thesis2025_Hanatani/Thesis2025_v2/Reference_29Dec24b.bib
+++ b/Thesis2025_Hanatani/Thesis2025_v2/Reference_29Dec24b.bib
@@ -5435,3 +5435,82 @@ Praat, a system for doing phonetics by computer.
   year={2004},
   publisher={Springer Science & Business Media}
 }
+
+@article{morise2016worldD4Cj,
+  title={音声分析合成システムWORLDにより実時間音声合成を実現するための拡張と実装例},
+  author={森勢将雅},
+  journal={情報処理学会研究報告},
+  volume={MUS--112},
+  number={20},
+  pages={1--6},
+  year={2016},
+  publisher={一般社団法人 日本音響学会}
+}
+
+@article{morise2016worldD4Ce,
+  title={D4C, a band-aperiodicity estimator for high-quality speech synthesis},
+  author={M.Morise},
+  journal={Speech Communication},
+  volume={84},
+  pages={75--65},
+  year={2016}
+}
+
+@article{yegnana2009DIO,
+  title={Event-Based Instantaneous Fundamental Frequency Estimation From Speech Signals},
+  author={B.Yegnanarayana and K.Murty},
+  journal={EEE Transactions on Audio, Speech, and Language Processing},
+  volume={17},
+  number={4},
+  pages={614--624},
+  year={2009}
+}
+
+@article{morise2016Kihonha,
+  title={基本波検出に基づくF0推定法の耐雑音性向上},
+  author={森勢将雅},
+  journal={研究報告音声言語情報処理（SLP）},
+  volume={SLP-110},
+  umber={5},
+  pages={1--6},
+  year={2016}
+}
+
+@article{morise2015Cheap,
+  title={CheapTric, a spectral envelope estimator for high-quality speech synthesis},
+  author={M.Morise},
+  journal={Speech Comminication},
+  volume={67},
+  pages={1--7},
+  year={2015}
+}
+
+@article{mathews1961pitch,
+  title={Pitch synchronous analysis of voiced sounds},
+  author={M.V.Mathews and J.E.Miller and E.E.David},
+  journal={J.Acoust.Soc.Am.},
+  volume={33},
+  number={2},
+  pages={179--186},
+  year={1961}
+}
+
+@book{Suzuki2011nyuumon,
+    title = {音響学入門},
+    year = {2011},
+    author = {鈴木陽一 and 赤木正人 and 伊藤彰則 and 佐藤洋 and 苣木禎史 and 中村健太郎},
+    editor = {日本音響学会},
+    series = {音響入門シリーズA-1},
+    publisher = {コロナ社},
+}
+
+@article{morise2019wasei,
+  title={話声の合成における基盤技術 --音声分析合成技術--},
+  author={森勢将雅},
+  journal={日本音響学会誌},
+  volume={75},
+  number={7},
+  pages={387--392},
+  year={2019},
+  publisher={一般社団法人 日本音響学会}
+}
