--- a/Thesis2025_Hanatani/Thesis2025_v2/3_ExpAngHapSad.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/3_ExpAngHapSad.tex
@@ -50,11 +50,11 @@
 この結果の第1主成分（PC1）と第2主成分（PC2）の分布を図\ref{fig:PCA-Russel_AngHapSad}(a)に示す。
 
 PC2まで、累積寄与率84\%を占めた。
-この図では、\textcolor{red}{横軸をPC2とし、縦軸をPC1の符号を反転させたものとしている。
-このようにして、図\ref{fig:PCA-Russel_AngHapSad}(b)に示すラッセルの円環モデル\cite{russell1980circumplex}内の感情語の位置が近くなるようにした。}
+この図では、横軸をPC2とし、縦軸をPC1の符号を反転させたものとしている。
+このようにすると、主成分分析結果と図\ref{fig:PCA-Russel_AngHapSad}(b)に示すラッセルの円環モデル\cite{russell1980circumplex}内のそれぞれの感情語の配置が非常に似ていることがわかる。
 比較すると、PC2が快--不快の軸で、PC1の逆符号が覚醒--沈静の軸とおおまかに一致することがわかる。
 また、中心から三角形の頂点に向かう線に沿うように分布している。
-各単語ごとに、三角形の頂点に近く原点から離れた音声、つまり最も「怒り」「悲しみ」「喜び」らしい単語を16元感情\textcolor{red}{$<<<$前項に記載。16感情ラベルの方が良いか？$>>>$}の中から抽出した。
+各単語ごとに、三角形の頂点に近く原点から離れた音声、つまり最も「怒り」「悲しみ」「喜び」らしい単語を16元感情の中から抽出した。
 これで同一内容の11単語を3感情分、合計33音声をそろえた。
 なお、薄い線の三角形は、抽出された音声を単語ごとに結んでいる（次のセクションで説明する1単語を除く）。
 
@@ -84,19 +84,18 @@ PC2まで、累積寄与率84\%を占めた。
 合成した音声を聞き、モーフィング音声の劣化がなるべく小さくなるように特徴点の位置を繰り返し調整した。
 実験者3名で、3組の感情対（「怒り--悲しみ」「悲しみ--喜び」「喜び--怒り」）を分担して作業を行った。
 最後に、全員が全ての合成音を聴取し、音質の確認を行った。
-\textcolor{red}{音声にざらつきや雑音がないか、聞いた際に違和感がないかに注意して確認した。}
+音声にざらつきや雑音がないか、聞いた際に違和感がないかに注意して確認した。
 その結果、1単語「おぼろづきよ」は他の単語よりモーフィングの際の劣化が目立ち、歪みを小さくすることができなかった。
 % また、感情単語として使われる状況を想像しやすいとは思えない。
 そこで、残りの10単語を実験刺激として用いることとした。
 これにより、10単語\time 7モーフィング率\time 3感情間の合計210音声を準備した。
 
 図\ref{fig:ExpRsltEmoPercent}(a)にその音声の配置の概念図を示す。
-\textcolor{red}{
-  図\ref{fig:PCA-Russel_AngHapSad}(a)に示した主成分分析結果に重ねて、作成したモーフィング音声の配置を模式的に示している。
-  % 前項でも述べた通り、各単語ごとに原点から最も離れた音声を採用しているため、
-  % モーフィング率100\%ないし0\%の音声は概念図上の感情ラベル（Ang,Hap,Sad）の付近に位置している。
-  図中のx印はモーフィング率50\%、○印は20,40,60,80\%の音声を示す。
-  }
+図\ref{fig:PCA-Russel_AngHapSad}(a)に示した主成分分析結果に重ねて、作成したモーフィング音声の配置を模式的に示している。
+% 前項でも述べた通り、各単語ごとに原点から最も離れた音声を採用しているため、
+% モーフィング率100\%ないし0\%の音声は概念図上の感情ラベル（Ang,Hap,Sad）の付近に位置している。
+図中のx印はモーフィング率50\%、○印は20,40,60,80\%の音声を示す。
+  
 
 
 % これは、恒定法で一対比較を行い感情知覚の弁別閾を求めるためである。 
@@ -113,7 +112,7 @@ PC2まで、累積寄与率84\%を占めた。
 \ref{sec:研究目的}節で述べたように、若年健聴者実験では通常音声と模擬難聴音声の対比を行う。
 モーフィングで合成した上記の210音声（以下では、無処理の意味で"Unpro"と呼ぶ）と対比するために、
 模擬難聴システムWHIS\cite{irino2023hearing}を用いて、模擬難聴音声を作成した。
-本実験では、\textcolor{red}{かなり聴こえにくくなっている高齢者を想定し、}
+本実験では、かなり聴こえにくくなっている高齢者を想定し、
 80歳の平均聴力レベル \cite{tsuiki2002nihon_Jpn}、圧縮特性健全度を中程度の$\alpha=0.5$と設定した。
 すなわち、125,250,500,1000,2000,4000,8000Hzで、24,24,27,28,33,48,69dBとした。
 つまり、500~Hzから4000~Hzの平均聴力レベルは34dBである。
@@ -153,7 +152,7 @@ PC2まで、累積寄与率84\%を占めた。
 どちらの手掛語が先かや、どの感情対の実験から始めるかは、参加者間でバランスを取った。
 
 参加者は、20歳から24歳の日本人大学生12名（男性7名、女性5名）であった。
-全員が125Hzから8000Hzの範囲で聴力レベルが\textcolor{red}{20\,dB以下}で健聴者であることを確認した。
+全員が125Hzから8000Hzの範囲で聴力レベルが20\,dB以下で健聴者であることを確認した。
 
 
 % ------------------------------
@@ -249,7 +248,7 @@ PC2まで、累積寄与率84\%を占めた。
 図\ref{fig:ExpRsltEmoPercent}下段に、(e)怒り--悲しみ対、(f)怒り--悲しみ対、(g)喜び--怒り対の回答率の、参加者間の平均値と標準偏差を示す。
 図\ref{fig:ExpRsltEmoPercent}(e)、(f)の2本の回答曲線の傾きは、図\ref{fig:ExpRsltEmoPercent}(a)、(b)の若年健聴者の傾きとそれほど相違がないように見えるが、
 手掛語による差異は若年健聴者よりも大きい。
-このことは、怒り--悲しみ対、怒り--悲しみ対に関しては、手掛語による差異は多少あるものの、若年健聴者とおおむね同様な弁別ができたということを示している
+このことは、怒り--悲しみ対、怒り--悲しみ対に関しては、手掛語による差異は多少あるものの、若年健聴者とおおむね同様な弁別ができたということを示している。
 
 対照的に、図\ref{fig:ExpRsltEmoPercent}(g)の喜び--怒り対の傾きは、図\ref{fig:ExpRsltEmoPercent}(e)怒り--悲しみ対、(f)悲しみ--喜び対、
 及び若年健聴者の(d)喜び--怒り対の傾きと比べてかなり緩やかになっている。
@@ -258,15 +257,14 @@ PC2まで、累積寄与率84\%を占めた。
 また、手掛語による差異は、判断のばらつきが大きかったためと考えられる。
 
 高齢者では、喜び--怒り対の感情弁別が特に難しかったという内観報告が多く見られた。
-\textcolor{red}{
-  高齢者については、怒りの感情音声があまり怒っているように感じられなかったという報告もあった。
-  これは、高齢者では否定的な感情の認識精度が下がるというMillらの報告\cite{mill2009age}と一致しているように見える。
-  しかし、Millらによると、最も認識精度が低下したのは「悲しみ」であり、その次に「怒り」であったため、この知見に従うならば
-  悲しみ--怒りの弁別が難しくなるように思える。
-  しかしながら、悲しみ--怒り対は健聴者と同程度の弁別精度であったため、単純に感情認識精度の低下が影響しているわけではないと考えられる。
-  % また、すべての高齢参加者は、質問の受け答えや実験における操作の理解等に問題はなかったため、認知機能の低下による影響も考えにくい。
-  喜びと怒りという特定の組み合わせでのみ弁別が困難である要因を別の視点から探る必要があるだろう。
-}
+高齢者については、怒りの感情音声があまり怒っているように感じられなかったという報告もあった。
+これは、高齢者では否定的な感情の認識精度が下がるというMillらの報告\cite{mill2009age}と一致しているように見える。
+しかし、Millらによると、最も認識精度が低下したのは「悲しみ」であり、その次に「怒り」であったため、この知見に従うならば
+悲しみ--怒りの弁別が難しくなるように思える。
+しかしながら、悲しみ--怒り対は健聴者と同程度の弁別精度であったため、単純に感情認識精度の低下が影響しているわけではないと考えられる。
+% また、すべての高齢参加者は、質問の受け答えや実験における操作の理解等に問題はなかったため、認知機能の低下による影響も考えにくい。
+喜びと怒りという特定の組み合わせでのみ弁別が困難である要因を別の視点から探る必要があるだろう。
+
 % 高齢者の感情認知の特徴-若干意味重視（Ben）-文化的背景-知識
 
 一方、若年健聴者においては、喜び--怒り対の感情弁別が難しかったという報告は2件のみであり、どの感情対も同程度の難しさだと報告した参加者がほとんどであった。
@@ -323,7 +321,7 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 高齢者健聴群の喜び--怒り(H--A)対と高齢者健聴群のその他の感情対・若年健聴者の全感情対で有意差があった。
 この結果は、高齢者は健聴・難聴に関わらず喜び--怒り(H--A)対の弁別が難しかったことを示している。
 さらに、高齢者喜び--怒り(H--A)対では、健聴群と難聴群の間でも有意差が見られたことから、
-\textcolor{red}{聴力レベルに関わらず}弁別が難しくなる可能性が示唆された。
+聴力レベルに関わらず弁別が難しくなる可能性が示唆された。
 
 
 
@@ -373,6 +371,6 @@ ONHは、従来の感情認識実験\cite{christensen2019effects}の基準に従
 その結果、若年健聴者実験では模擬難聴処理の有無でJND、PSEに有意差は無く、聴覚末梢系の機能低下は感情知覚に影響しない可能性が示唆された。
 高齢者実験では、喜び--怒りの判断だけが著しく難しいことがわかった。
 このことから、高齢者はラッセルの感情円環モデル\cite{russell1980circumplex}において、
-\textcolor{red}{「覚醒--沈静の度合いが同程度の場合、快--不快の判断が難しい可能性がある」という作業仮説を立てた。
-この作業仮説を検証するために、}第4象限に位置するCalm（「落着き」）を加えて弁別実験を行うことが、要因解明の手がかりになるかもしれない。
+「覚醒--沈静の度合いが同程度の場合、快--不快の判断が難しい可能性がある」という作業仮説を立てた。
+この作業仮説を検証するために、第4象限に位置するCalm（「落着き」）を加えて弁別実験を行うことが、要因解明の手がかりになるかもしれない。
 
