--- a/Thesis2025_Hanatani/Thesis2025_v2/Fig8_CompareExp.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/Fig8_CompareExp.tex
@@ -28,7 +28,7 @@
   %------------------------%
   
   \caption{実験条件（YNH-Unpro,YNH-80yr,ONH,OHL）ごとのJND。
-          \textcolor{red}{（a）落着き実験、（b）怒り・悲しみ・喜び実験。}
+          （a）落着き実験、（b）怒り・悲しみ・喜び実験。
            各3組のデータは感情対に対応。落着き(Calm, C), 怒り(Angry, A),悲しみ(Sad, S),喜び(Happy,H)の2つの組み合わせで表示。
            25,50,75パーセンタイルの箱ひげ図で表示。参加者のJND/PSEを手掛語（怒り*, 悲しみ△, 喜び◯, 落着き■）ごとに示す。
           Tukey HSDの多重比較検定（有意水準5\%）の結果も示す。}
