--- a/Thesis2025_Hanatani/Thesis2025_v2/修論2024年度_花谷.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/修論2024年度_花谷.tex
@@ -123,14 +123,14 @@
 本論文では、高齢者の感情知覚特性について、2つの感情弁別実験を行なって調査した。
 難聴の原因は末梢系から認知系までさまざまであり、その特定は困難である。
 そのため、本研究では聴覚末梢系の機能低下だけがどの程度感情知覚に影響するのか調査を試みた。
-\textcolor{red}{また、若年健聴者と高齢者を対象に実験を行い、その結果を比較することで感情知覚特性の傾向に相違があるかどうかを調べる。}
+また、若年健聴者と高齢者を対象に実験を行い、その結果を比較することで感情知覚特性の傾向に相違があるかどうかを調べる。
 
-1つ目の実験では、3感情（喜び・悲しみ・怒り）間のモーフィング音声を用いて、若年健聴者と高齢者を対象にした感情弁別実験を実施した。
+1つ目の実験では、3感情（怒り・悲しみ・喜び）間のモーフィング音声を用いて、若年健聴者と高齢者を対象にした感情弁別実験を実施した。
 若年健聴者には末梢系の機能低下を模擬する模擬難聴処理を行った音声を聴かせて、通常音声を聴いた場合との感情知覚の相違を検討した。
 また、高齢者にも同じ通常音声を用いて実験を行い、若年健聴者の結果と比較した。
 その結果、若年健聴者においては模擬難聴処理の有無で弁別閾に有意差はなく、聴覚末梢系の機能低下は感情知覚に影響しない可能性が示唆された。
 高齢者においては、若年健聴者に比べても、喜び--怒り対の判断のみ著しく困難であることがわかった。
-この結果を受けて、ラッセルの感情円環モデルにおいて、「覚醒」の度合いが同程度の場合、「快-不快」の判断が高齢者には難しいという作業仮説を立てた。
+この結果を受けて、ラッセルの感情円環モデルにおいて、「覚醒」の度合いが同程度の場合、「快--不快」の判断が高齢者には難しいという作業仮説を立てた。
 
 2つ目の実験では、作業仮説の検証のために新たに「落着き」の音声を加え、怒り--落着き・悲しみ--落着き・喜び--落着きの対における弁別実験を行った。
 その結果、悲しみ--落着きの弁別閾は相対的に小さく、作業仮説は反証された。
