--- a/Thesis2025_Hanatani/Thesis2025_v2/1_Intro.tex
+++ b/Thesis2025_Hanatani/Thesis2025_v2/1_Intro.tex
@@ -24,7 +24,7 @@
 精度低下の要因は、聴覚末梢系の機能低下による聴力レベルによるものだけとは考えられてはいない。
 しかしながら、明確にそのことを示す実験データは存在せず、末梢系から認知系のどの部位の機能低下によるものかも解明されていない。
 そこで、まずは聴覚末梢系の機能低下だけが、感情知覚にどの程度影響するかの調査を試みた。
-\textcolor{red}{また、若年健聴者と高齢者を対象に同じ手順で実験を行い、両者の相違から感情知覚特性の情報を得ることを目指した。}
+また、若年健聴者と高齢者を対象に同じ手順で実験を行い、両者の相違から感情知覚特性の情報を得ることを目指した。
 % 若年健聴者に模擬難聴処理を行った音声を聴かせ、通常音声を聴いた場合との感情知覚の相違を実験的に検討した。
 % さらに、高齢者の感情知覚特性を、同じ通常音声を用いて同じ手順で測定した。
 % 若年健聴者との相違から知覚特性の情報を得ることを目指した。
